[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/small/nametag.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/hand.gd" type="Script" id=2]
[ext_resource path="res://scripts/small/nametag3d.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.7, 0.07, 1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1.4, 0.14, 2 )

[node name="hand" type="Area" groups=[
"draggable",
"hand",
"has_rcm",
"rotatable",
"shift_draggable",
]]
script = ExtResource( 2 )

[node name="handCol" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="handMesh" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="Tween" type="Tween" parent="."]

[node name="nametag3d" type="Sprite3D" parent="."]
transform = Transform( -0.75, -6.55671e-08, 2.86603e-15, 0, -3.27835e-08, -0.75, 6.55671e-08, -0.75, 3.27835e-08, 0, 0.5, 1.3 )
axis = 1
double_sided = false
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="nametag3d"]
size = Vector2( 1280, 123 )
transparent_bg = true
handle_input_locally = false
fxaa = true
hdr = false
usage = 0
render_target_v_flip = true

[node name="nametag" parent="nametag3d/Viewport" instance=ExtResource( 1 )]
margin_left = -435.0
margin_right = 435.0
custom_colors/font_color = Color( 0.309804, 0.968627, 0.847059, 1 )
